# cpptoolkit

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-single-platform.yml  codeql.yml
docs/: CommitTemplate.md  Doxyfile  mainpage.dox  reqs.ignore  requirements.md
docs/snippets/: cpp.json
examples/: config.ini  ex00_logger.cpp  ex01_worker.cpp  ex02_worker_pool.cpp  ex03_service.cpp  ex04_service_pool.cpp  ex05_config.cpp  ex05_events.cpp  ex06_events.cpp  ex06_logger.cpp  ex06_networking_udp.cpp  ex07_config.cpp  ex07_filesource.cpp  ex07_networking_udp.cpp  ex08_ctfilesource.cpp  ex08_filesink.cpp  ex08_logger.cpp  ex09_ctevents.cpp  ex10_logger.cpp
include/: CtDatatypes.hpp  CtExceptions.hpp  CtIO.hpp  CtNetworking.hpp  CtThreading.hpp  CtTime.hpp  CtTypes.hpp  CtUtils.hpp  core.hpp  cpptoolkit.hpp  definitions.hpp  version.hpp
include/core/: CtExceptions.hpp  CtHelpers.hpp  CtTypes.hpp  definitions.hpp  version.hpp
include/core/exceptions/: CtEventExceptions.hpp  CtException.hpp  CtFileExceptions.hpp  CtNetworkExceptions.hpp  CtThreadExceptions.hpp  CtTypeExceptions.hpp
include/exceptions/: CtEventExceptions.hpp  CtException.hpp  CtExceptions.hpp  CtFileError.hpp  CtFileExceptions.hpp  CtFileParseError.hpp  CtGenericExeptions.hpp  CtKeyNotFoundError.hpp  CtNetworkExceptions.hpp  CtServiceError.hpp  CtSocketError.hpp  CtThreadError.hpp  CtThreadExceptions.hpp  CtTypeExceptions.hpp  CtTypeParseError.hpp  CtWorkerError.hpp
include/io/: CtBlock.hpp  CtBlockData.hpp  CtBlockType.hpp  CtConfigIO.hpp  CtConfigParser.hpp  CtFileInput.hpp  CtFileOutput.hpp  CtIO.hpp  CtIOTypes.hpp  CtLogger.hpp  CtSink.hpp  CtSource.hpp
include/io/sinks/: CtFile.hpp  CtFileSink.hpp  CtLog.hpp  CtLogSink.hpp  CtSink.hpp  CtTextFileSink.hpp
include/io/sources/: CtBinaryFileSource.hpp  CtFileSource.hpp  CtSource.hpp  CtTextFileSource.hpp
include/networking/: CtSocketUdp.hpp
include/networking/sockets/: CtSocketHelpers.hpp  CtSocketUdp.hpp
include/threading/: CtService.hpp  CtServicePool.hpp  CtTask.hpp  CtThread.hpp  CtWorker.hpp  CtWorkerPool.hpp
include/time/: CtTime.hpp  CtTimer.hpp
include/utils/: CtConfig.hpp  CtConfigIO.hpp  CtEvents.hpp  CtLogger.hpp  CtObject.hpp  CtTask.hpp  CtUtils.hpp
scripts/: check_reqs_coverage.py
src/core/: CtHelpers.cpp  CtTypes.cpp
src/io/: CtBlock.cpp  CtConfigIO.cpp  CtConfigParser.cpp  CtFileInput.cpp  CtFileOutput.cpp  CtIOTypes.cpp  CtLogger.cpp  CtSink.cpp  CtSource.cpp
src/io/sinks/: CtFile.cpp  CtFileSink.cpp  CtLog.cpp  CtLogSink.cpp  CtSink.cpp  CtTextFileSink.cpp
src/io/sources/: CtBinaryFileSource.cpp  CtFileSource.cpp  CtSource.cpp  CtTextFileSource.cpp
src/networking/: CtSocketUdp.cpp
src/networking/sockets/: CtSocketHelpers.cpp  CtSocketUdp.cpp
src/threading/: CtService.cpp  CtServicePool.cpp  CtTask.cpp  CtThread.cpp  CtWorker.cpp  CtWorkerPool.cpp
src/time/: CtTimer.cpp
src/utils/: CtConfig.cpp  CtConfigIO.cpp  CtLogger.cpp  CtObject.cpp  CtTask.cpp
tests/: ctconfig.cpp  ctconfigio.cpp  ctconfigparser.cpp  ctfile.cpp  ctlogger.cpp  ctobject.cpp  ctservice.cpp  ctservicepool.cpp  cttask.cpp  ctthread.cpp  cttimer.cpp  cttypes.cpp  ctworker.cpp  ctworkerpool.cpp  main_test.cpp
toolchains/: arm-toolchain.cmake  arm64-toolchain.cmake  x86-toolchain.cmake  x86_64-toolchain.cmake
